--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<div class="inner">
 					
 				<!----	<span class="icon solid major fa-cloud"></span>--->
-					<h1>Hi, I'm <strong>RAGHU </strong>,  Bioinformatician , and Aspiring  Game Developer <br />
+					<h1>Hi, I'm <strong>RAGHU </strong><br />
 					BIOLOGY + COMPUTER SCIENCE = BIOINFORMATICS<br>
 					BIONIFORMATICS + GAME DEVELOPMENT =&#129327;</span>  <a href="http://html5up.net"></a></h1>
 				<!----	<p>Here in this place of discover i will put github, linkdein, gamil and resume logos with link </p>-->			
